@@ -5,6 +5,7 @@
 	* sdcc-build-bootstrap.sh: don't remove the build if uploading
 	* local/derna.mk: x86 build on derna build machine
 	* local/cf-x86.mk: disable x86 build
+	* local/derna-i586-mingw32msvc.mk: i386 mingw build on derna
 
 2011-08-10 Borut Razem <borut.razem AT gmail.com>
 
